Webpack 2 with Webpack Dev Server Configuration

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,7 @@
-$color: orange;
+$color: lightblue;
 
 body {
+  font-family: 'helveticaNeue', 'helvetica', sans-serif;
   background-color: $color;
+  color: #333;
 }
