--- a/src/index-template.pug
+++ b/src/index-template.pug
@@ -14,4 +14,6 @@ html(lang='en')
 
         //- ----- CSS Files ----- //
     body
-        h1 Ready!!
+        #intro
+            h1 Ready!!
+            img#happy(src=require('./img/fun.svg'))
